--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/fortify": "^1.21",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-query-builder": "^5.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
